# platform.core.context.context-service

./: AUTHORS  CMakeLists.txt  LICENSE  project.config
data/: access-config.xml  template-json-to-sql.sh  trigger-template.json
packaging/: context-service.manifest  context-service.service  context-service.spec  context-service.xml  org.tizen.context.conf  org.tizen.context.service
src/: ClientRequest.cpp  ClientRequest.h  ContextManager.cpp  ContextManager.h  ContextManagerImpl.cpp  ContextManagerImpl.h  DBusServer.cpp  DBusServer.h  ProviderHandler.cpp  ProviderHandler.h  ProviderLoader.cpp  ProviderLoader.h  Request.cpp  Request.h  Server.cpp  Server.h  client_request.cpp  client_request.h  context_mgr_impl.cpp  context_mgr_impl.h  db_mgr_impl.cpp  db_mgr_impl.h  dbus_server_impl.cpp  dbus_server_impl.h  provider.cpp  provider.h  request.cpp  request.h  server.cpp  server.h  timer_mgr_impl.cpp  timer_mgr_impl.h  zone_util_impl.cpp  zone_util_impl.h
src/access_control/: PeerCreds.cpp  PeerCreds.h  Privilege.cpp  Privilege.h  config_loader.cpp  config_loader.h  peer_creds.cpp  peer_creds.h  privilege.cpp  privilege.h
src/context_trigger/: action_manager.cpp  action_manager.h  clips_handler.cpp  clips_handler.h  context_fact_types.h  context_listener_iface.h  context_monitor.cpp  context_monitor.h  fact.cpp  fact.h  fact_reader.cpp  fact_reader.h  fact_request.cpp  fact_request.h  rule.cpp  rule.h  rule_evaluator.cpp  rule_evaluator.h  rule_manager.cpp  rule_manager.h  script_generator.cpp  script_generator.h  template_manager.cpp  template_manager.h  timer.cpp  timer.h  timer_types.h  trigger.cpp  trigger.h
src/policy/: PolicyManager.cpp  PolicyManager.h  PolicyRequest.cpp  PolicyRequest.h
src/trigger/: ActionManager.cpp  ActionManager.h  ContextMonitor.cpp  ContextMonitor.h  FactRequest.cpp  FactRequest.h  FactTypes.h  IContextListener.h  Rule.cpp  Rule.h  RuleEvaluator.cpp  RuleEvaluator.h  RuleManager.cpp  RuleManager.h  TemplateManager.cpp  TemplateManager.h  Timer.cpp  Timer.h  Trigger.cpp  Trigger.h
